fix: placeholder text overlapping in firefox

--- a/src/components/DateTextField/DateTextField.scss
+++ b/src/components/DateTextField/DateTextField.scss
@@ -6,6 +6,10 @@
             cursor: pointer;
         }
 
+        & .deriv-input--label-animation-disabled {
+            opacity: 0;
+        }
+
         &__field {
             @include desktop {
                 height: 3.2rem;
